--- a/style.css
+++ b/style.css
@@ -14,6 +14,15 @@ html {
     font-family: 'Amatic SC', cursive;
   }
   
+  .container{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
   h1 {
     text-align: center;
     font-size: 10rem;
@@ -33,7 +42,6 @@ html {
     height: 400px;
     display: flex;
     flex-wrap: wrap;
-    margin: 0 auto;
   }
   
   .hole {
@@ -69,9 +77,7 @@ html {
   }
 
   button{
-      position: absolute;
-      top: 90%;
-      left: 33%;
+
       width: 50rem;
       height: 5rem;
       font-size: 20px;
